# StockAnalysis

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  README.md  conversation_summary.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  package-lock.json  restart_dev.bat  test_import.js
backend/: .dockerignore  .env.example  API_INTEGRATION_REPORT.md  Dockerfile  Dockerfile.dev  add_key.py  check_syntax.py  docker-compose.test.yml  main.py  main_simple.py  pyproject.toml  quick_setup.py  setup_model.py  test_ai_framework.py  test_complete_workflow.py  test_glm47_thinking.py  test_mcp_module.py  test_model_dump.py  test_ta_simple.py
backend/core/: background_tasks.py  bootstrap.py  colored_formatter.py  config.py  exceptions.py  logging_config.py  security_config.py
backend/core/admin/: __init__.py  api.py  audit_logger.py  audit_models.py  service.py  tasks.py
backend/core/ai/: __init__.py  api.py  concurrency.py  exceptions.py  model_catalog_models.py  model_catalog_service.py  pricing.py  provider_models.py  provider_service.py  service.py  thinking_manager.py  types.py  usage.py
backend/core/ai/langchain/: __init__.py  adapter.py
backend/core/ai/llm/: __init__.py  openai_compat.py  provider.py  thinking_adapter.py  thinking_parser.py
backend/core/ai/model/: __init__.py  schemas.py  service.py
backend/core/api_compat/: __init__.py  analysis_router.py  config_router.py  reports_router.py
backend/core/auth/: dependencies.py  models.py  models.py.bak  rbac.py  security.py
backend/core/cache/: api.py
backend/core/database_admin/: api.py
backend/core/db/: initialization.py  models.py  mongodb.py  redis.py
backend/core/events/: bus.py  schemas.py
backend/core/favorites/: __init__.py  api.py  models.py  service.py
backend/core/market_data/: __init__.py  admin_api.py  category_models.py  category_service.py
backend/core/market_data/config/: schemas.py  service.py
backend/core/market_data/managers/: __init__.py  source_router.py
backend/core/market_data/models/: __init__.py  api_monitor.py  datasource.py  stock_company.py  stock_financials.py  stock_info.py  stock_macro.py  stock_other.py  stock_quote.py  sync_task.py  watchlist.py
backend/core/market_data/repositories/: __init__.py  base.py  datasource.py  financials.py  macro_economic.py  market_news.py  stock_company.py  stock_financial.py  stock_info.py  stock_quotes.py  watchlist.py
backend/core/market_data/services/: data_scheduler.py  data_sync_service.py  dual_channel_service.py  market_data_service.py  rate_limiter.py  source_call_monitor.py  source_monitor_service.py  startup_data_service.py
backend/core/market_data/sources/: __init__.py  base.py  registry.py
backend/core/market_data/tools/: __init__.py  a_stock_tools.py  base_tool.py  data_cleaner.py  field_mapper.py  hk_stock_tools.py  us_stock_tools.py
backend/core/mcp/: schemas.py
backend/core/mcp/adapter/: __init__.py  adapter.py  exceptions.py  (+2 more)
backend/core/monitoring/: diagnostics.py
backend/core/multi_market/: __init__.py  api.py
backend/core/operation_logs/: api.py
backend/core/scheduler/: api.py
backend/core/screening/: __init__.py  api.py  fields.py  service.py
backend/core/security/: __init__.py  captcha_service.py  email_verification.py  encryption.py  ip_trust.py  migration.py  rate_limiter.py
backend/core/settings/: __init__.py  api.py  service.py
backend/core/stock_data/: __init__.py  api.py
backend/core/sync/: __init__.py  api.py
backend/core/system/: api.py  data_source_status.py
backend/core/system_logs/: api.py
backend/core/tools/: api.py
backend/core/usage/: api.py  service.py
backend/core/user/: __init__.py  api.py  dependencies.py  models.py  service.py  settings_api.py  settings_database.py  settings_models.py  settings_service.py
backend/modules/analysis/: api.py  batch_api.py  single_api.py
backend/modules/ask_stock/: api.py
backend/modules/dashboard/: __init__.py  api.py
backend/modules/market_data/: __init__.py  api.py  models.py  schemas.py
backend/modules/mcp/: __init__.py  schemas.py
backend/modules/screener/: api.py
backend/modules/task_center/: api.py
backend/modules/trading_agents/: __init__.py  admin_api.py  api.py  exceptions.py  schemas.py
backend/modules/user_management/: __init__.py  api.py  models.py  service.py
backend/scripts/: check_task.py
backend/tests/: conftest.py
backend/tests/core/: test_config.py  test_db_models.py  test_field_mapper.py  test_market_data_models.py  test_rbac.py  test_security.py  test_user_models.py  test_user_service.py
backend/tests/integration/: conftest.py  test_ai_integration.py  test_api_endpoints.py  test_user_service.py
backend/tests/modules/: test_trading_agents_models.py  test_workflow_state.py
(+542 files in other folders)
